sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:17: error: unclosed character literal
        echo('pour')
                  ^AlgCocktailSort1:17: error: ')' expected but something found.
        echo('pour')
                  ^